# silvana-book-agent

./: .gitignore  CLAUDE.md  Cargo.toml  DEPLOY-DEMOS.md  Makefile  README.md  TEST-REPORT.md  agent.toml  docker-compose.demos.yml
crates/agent-ai-signal/: Cargo.toml  agent.toml
crates/agent-ai-signal-llm-schema/: Cargo.toml  agent.toml  doc.md
crates/agent-ai-signal-llm-schema/demo/: package-lock.json  package.json
crates/agent-ai-signal-llm-schema/demo/app/: layout.tsx  page.tsx
crates/agent-ai-signal-llm-schema/demo/lib/: ai-signal-engine.ts
crates/agent-ai-signal-llm-schema/src/: main.rs
crates/agent-ai-signal/demo/: Dockerfile  package-lock.json  package.json
crates/agent-ai-signal/demo/app/: layout.tsx  page.tsx
crates/agent-ai-signal/demo/lib/: ai-signal-engine.ts  store.ts
crates/agent-ai-signal/src/: main.rs
crates/agent-anomaly-classifier-rule-clustering/: Cargo.toml  agent.toml  doc.md
crates/agent-anomaly-classifier-rule-clustering/demo/: package-lock.json  package.json
crates/agent-anomaly-classifier-rule-clustering/src/: main.rs
crates/agent-audit-anomaly-heuristic/: Cargo.toml  agent.toml  doc.md
crates/agent-audit-anomaly-heuristic/demo/: package-lock.json  package.json
crates/agent-audit-anomaly-heuristic/src/: main.rs
crates/agent-audit-attestation/: Cargo.toml  agent.toml
crates/agent-audit-attestation/demo/: Dockerfile  package-lock.json  package.json
crates/agent-audit-attestation/src/: main.rs
crates/agent-audit-replay-back-test/: Cargo.toml  agent.toml  doc.md
crates/agent-audit-replay-back-test/demo/: package-lock.json  package.json
crates/agent-audit-replay-back-test/src/: main.rs
crates/agent-auth/: Cargo.toml  agent.toml
crates/agent-auth/demo/: Dockerfile  package-lock.json  package.json
crates/agent-auth/src/: main.rs
crates/agent-circuit-breaker-deviation/: Cargo.toml  agent.toml  doc.md
crates/agent-circuit-breaker-deviation/demo/: Dockerfile  package-lock.json  package.json
crates/agent-circuit-breaker-deviation/src/: main.rs
crates/agent-copy-trading-proportional/: Cargo.toml  agent.toml  doc.md
crates/agent-copy-trading-proportional/demo/: Dockerfile  package-lock.json  package.json
crates/agent-copy-trading-proportional/src/: main.rs
crates/agent-liquidity-screening-depth-probe/: Cargo.toml  agent.toml  doc.md
crates/agent-liquidity-screening-depth-probe/demo/: Dockerfile  package-lock.json  package.json
crates/agent-liquidity-screening-depth-probe/src/: main.rs
crates/agent-news-sentiment-lexicon/: Cargo.toml  agent.toml  doc.md
crates/agent-news-sentiment-lexicon/demo/: package-lock.json  package.json
crates/agent-news-sentiment-lexicon/src/: main.rs
crates/agent-oracle/: Cargo.toml  agent.toml
crates/agent-oracle/demo/: Dockerfile  package-lock.json  package.json
crates/agent-oracle/src/: main.rs
crates/agent-order-expiry/: Cargo.toml  agent.toml
crates/agent-order-expiry-ttl/: Cargo.toml  agent.toml  doc.md
crates/agent-order-expiry-ttl/demo/: Dockerfile  package-lock.json  package.json
crates/agent-order-expiry-ttl/src/: main.rs
crates/agent-order-expiry/demo/: Dockerfile  package-lock.json  package.json
crates/agent-order-expiry/src/: main.rs
crates/agent-orderbook-streaming/: Cargo.toml  agent.toml
crates/agent-orderbook-streaming/demo/: Dockerfile  package-lock.json  package.json
crates/agent-orderbook-streaming/src/: main.rs
crates/agent-pre-trade-check/: Cargo.toml  agent.toml
crates/agent-pre-trade-check-offline-rules/: Cargo.toml  agent.toml  doc.md
crates/agent-pre-trade-check-offline-rules/demo/: Dockerfile  package-lock.json  package.json
crates/agent-pre-trade-check-offline-rules/src/: main.rs
crates/agent-pre-trade-check/demo/: Dockerfile  package-lock.json  package.json
crates/agent-pre-trade-check/src/: main.rs
crates/agent-risk-management-composite/: Cargo.toml  agent.toml  doc.md
crates/agent-risk-management-composite/demo/: Dockerfile  package-lock.json  package.json
crates/agent-risk-management-composite/src/: main.rs
crates/agent-selective-disclosure/: Cargo.toml  agent.toml
crates/agent-selective-disclosure-filtered/: Cargo.toml  agent.toml  doc.md
crates/agent-selective-disclosure-filtered/demo/: package-lock.json  package.json
crates/agent-selective-disclosure-filtered/src/: main.rs
crates/agent-selective-disclosure/demo/: Dockerfile  package-lock.json  package.json
crates/agent-selective-disclosure/src/: main.rs
crates/agent-signature-ed25519/: Cargo.toml  agent.toml  doc.md
crates/agent-signature-ed25519/demo/: Dockerfile  package-lock.json  package.json
crates/agent-signature-ed25519/src/: main.rs
crates/agent-strategy-genesis/: Cargo.toml  agent.toml
crates/agent-strategy-genesis/demo/: Dockerfile  package-lock.json  package.json
crates/agent-strategy-genesis/src/: main.rs
crates/agent-test-run/: Cargo.toml  agent.toml
crates/agent-test-run/demo/: Dockerfile  package-lock.json  package.json
crates/agent-test-run/src/: main.rs
crates/agent-tpsl/: Cargo.toml  Dockerfile  agent.toml
crates/agent-tpsl/demo/: Dockerfile  README.md  package-lock.json  package.json
crates/agent-tpsl/src/: acs_worker.rs  main.rs
crates/agent-trade-explain/: Cargo.toml  agent.toml
crates/agent-trade-explain/demo/: Dockerfile  package-lock.json  package.json
crates/agent-trade-explain/src/: main.rs
crates/agent-trading-history/: Cargo.toml  agent.toml
crates/agent-trading-history/demo/: Dockerfile  package-lock.json  package.json
crates/agent-trading-history/src/: main.rs
crates/agent-watchlist-passive/: Cargo.toml  agent.toml  doc.md
crates/agent-watchlist-passive/demo/: Dockerfile  package-lock.json  package.json
crates/agent-watchlist-passive/src/: main.rs
crates/agent-witnesses-shell-hooks/: Cargo.toml  agent.toml  doc.md
crates/agent-witnesses-shell-hooks/demo/: Dockerfile  package-lock.json  package.json
crates/agent-witnesses-shell-hooks/src/: main.rs
crates/atomic-quote/: Cargo.toml
crates/atomic-quote/src/: envelope.rs  lib.rs
(+2386 files in other folders)
