[workspace]
resolver = "2"
members = [
    "crates/orderbook-cloud-agent",
    "crates/orderbook-agent-logic",
    "crates/orderbook-proto",
    "crates/tx-verifier",
    "crates/message-signing",
]

[workspace.package]
version = "0.1.0"
edition = "2024"
authors = ["DFST"]
license = "Apache-2.0"

[workspace.dependencies]
# Core dependencies with consistent versions across all crates
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt", "json"] }
tokio = { version = "1", features = ["full"] }
chrono = { version = "0.4", features = ["serde"] }
hex = "0.4"
sha2 = "0.10"
base64 = "0.22"

# CLI dependencies
clap = { version = "4", features = ["derive"] }
ed25519-dalek = { version = "2.1", features = ["rand_core"] }
rand = "0.8"
dotenvy = "0.15"

# gRPC and protobuf dependencies
tonic = "0.14"
prost = "0.14"
prost-types = "0.14"
prost-reflect = { version = "0.16", features = ["derive"] }
once_cell = "1.21.3"
tonic-reflection = "0.14"

# Build dependencies
tonic-build = "0.14"
tonic-prost = "0.14"
tonic-prost-build = "0.14.2"
prost-build = "0.14"
prost-reflect-build = "0.16"

# Additional dependencies
tokio-stream = "0.1"
