[workspace]
resolver = "2"
members = [
    "crates/cloud-agent",
    "crates/cli",
    "crates/agent-logic",
    "crates/orderbook-proto",
    "crates/tx-verifier",
    "crates/message-signing",
    "examples/buy_cc",
    "crates/agent-spot-dca",
    "crates/agent-tpsl",
    "crates/agent-watchlist",
    "crates/agent-order-expiry",
    "crates/agent-state-monitor",
    "crates/agent-signature",
    "crates/agent-auth",
    "crates/agent-dca-portfolio",
    "crates/agent-notifier",
    "crates/agent-cash-buffer",
    "crates/agent-killswitch",
    "crates/agent-twap",
    "crates/agent-spot-grid",
    "crates/agent-mean-reversion",
    "crates/agent-risk-alert",
    "crates/agent-circuit-breaker",
    "crates/agent-test-run",
    "crates/agent-readiness-check",
    "crates/agent-portfolio-health",
    "crates/agent-orderbook-streaming",
    "crates/agent-oracle",
    "crates/agent-fair-value",
    "crates/agent-spread-capture",
    "crates/agent-signal-bot",
    "crates/agent-inventory-mgmt",
    "crates/agent-order-matching",
    "crates/agent-witnesses",
    "crates/agent-failure-recovery",
    "crates/agent-infinite-grid",
    "crates/agent-trend-analysis",
    "crates/agent-pairs-trading",
    "crates/agent-iceberg-execution",
    "crates/agent-volatility-screening",
    "crates/agent-pre-trade-check",
    "crates/agent-pnl-screening",
    "crates/agent-trend-following",
    "crates/agent-portfolio-rebalancing",
    "crates/agent-trading-history",
    "crates/agent-risk-exposure",
    "crates/agent-blocked-party",
    "crates/agent-hedging",
    "crates/agent-block-execution",
    "crates/agent-batch-orders",
    "crates/agent-compliance-screening",
    "crates/agent-liquidity-screening",
    "crates/agent-target-allocation",
    "crates/agent-liquidity-seeking",
    "crates/agent-selective-disclosure",
    "crates/agent-market-abuse",
    "crates/agent-human-approval",
    "crates/agent-concentration-risk",
    "crates/agent-yield-rotation",
    "crates/agent-treasury-mgmt",
    "crates/agent-contractual-compliance",
    "crates/agent-legal-compliance",
    "crates/agent-scam-screening",
    "crates/agent-risk-management",
    "crates/agent-inventory-risk",
    "crates/agent-smart-allocation",
    "crates/agent-algo-order",
    "crates/agent-audit-attestation",
    "crates/agent-audit-replay",
    "crates/agent-audit-retention",
    "crates/agent-audit-anomaly",
    "crates/agent-copy-trading",
    "crates/agent-ai-signal",
    "crates/agent-news-sentiment",
    "crates/agent-strategy-genesis",
    "crates/agent-trade-explain",
    "crates/agent-anomaly-classifier",
]
default-members = [
    "crates/cloud-agent",
    "crates/cli",
    "crates/agent-logic",
    "crates/orderbook-proto",
    "crates/tx-verifier",
    "crates/message-signing",
    "crates/agent-spot-dca",
    "crates/agent-tpsl",
    "crates/agent-watchlist",
    "crates/agent-order-expiry",
    "crates/agent-state-monitor",
    "crates/agent-signature",
    "crates/agent-auth",
    "crates/agent-dca-portfolio",
    "crates/agent-notifier",
    "crates/agent-cash-buffer",
    "crates/agent-killswitch",
    "crates/agent-twap",
    "crates/agent-spot-grid",
    "crates/agent-mean-reversion",
    "crates/agent-risk-alert",
    "crates/agent-circuit-breaker",
    "crates/agent-test-run",
    "crates/agent-readiness-check",
    "crates/agent-portfolio-health",
    "crates/agent-orderbook-streaming",
    "crates/agent-oracle",
    "crates/agent-fair-value",
    "crates/agent-spread-capture",
    "crates/agent-signal-bot",
    "crates/agent-inventory-mgmt",
    "crates/agent-order-matching",
    "crates/agent-witnesses",
    "crates/agent-failure-recovery",
    "crates/agent-infinite-grid",
    "crates/agent-trend-analysis",
    "crates/agent-pairs-trading",
    "crates/agent-iceberg-execution",
    "crates/agent-volatility-screening",
    "crates/agent-pre-trade-check",
    "crates/agent-pnl-screening",
    "crates/agent-trend-following",
    "crates/agent-portfolio-rebalancing",
    "crates/agent-trading-history",
    "crates/agent-risk-exposure",
    "crates/agent-blocked-party",
    "crates/agent-hedging",
    "crates/agent-block-execution",
    "crates/agent-batch-orders",
    "crates/agent-compliance-screening",
    "crates/agent-liquidity-screening",
    "crates/agent-target-allocation",
    "crates/agent-liquidity-seeking",
    "crates/agent-selective-disclosure",
    "crates/agent-market-abuse",
    "crates/agent-human-approval",
    "crates/agent-concentration-risk",
    "crates/agent-yield-rotation",
    "crates/agent-treasury-mgmt",
    "crates/agent-contractual-compliance",
    "crates/agent-legal-compliance",
    "crates/agent-scam-screening",
    "crates/agent-risk-management",
    "crates/agent-inventory-risk",
    "crates/agent-smart-allocation",
    "crates/agent-algo-order",
    "crates/agent-audit-attestation",
    "crates/agent-audit-replay",
    "crates/agent-audit-retention",
    "crates/agent-audit-anomaly",
    "crates/agent-copy-trading",
    "crates/agent-ai-signal",
    "crates/agent-news-sentiment",
    "crates/agent-strategy-genesis",
    "crates/agent-trade-explain",
    "crates/agent-anomaly-classifier",
]

[workspace.package]
version = "0.3.4"
edition = "2024"
authors = ["DFST"]
license = "Apache-2.0"

[workspace.dependencies]
# Core dependencies with consistent versions across all crates
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt", "json"] }
tokio = { version = "1", features = ["full"] }
chrono = { version = "0.4", features = ["serde"] }
hex = "0.4"
sha2 = "0.10"
base64 = "0.22"

# CLI dependencies
clap = { version = "4", features = ["derive"] }
ed25519-dalek = { version = "2.1", features = ["rand_core"] }
rand = "0.8"
dotenvy = "0.15"

# gRPC and protobuf dependencies
tonic = "0.14"
prost = "0.14"
prost-types = "0.14"
prost-reflect = { version = "0.16", features = ["derive"] }
once_cell = "1.21.3"
tonic-reflection = "0.14"

# Build dependencies
tonic-build = "0.14"
tonic-prost = "0.14"
tonic-prost-build = "0.14.2"
prost-build = "0.14"
prost-reflect-build = "0.16"

# Additional dependencies
tokio-stream = "0.1"
