[workspace]
resolver = "2"
members = [
    "crates/cloud-agent",
    "crates/cli",
    "crates/agent-logic",
    "crates/orderbook-proto",
    "crates/tx-verifier",
    "crates/message-signing",
    "examples/buy_cc",
    "crates/agent-spot-dca-scheduled",
    "crates/agent-tpsl-classic",
    "crates/agent-watchlist-passive",
    "crates/agent-order-expiry-ttl",
    "crates/agent-state-monitor-self-stream",
    "crates/agent-signature-ed25519",
    "crates/agent-auth-jwt",
    "crates/agent-dca-portfolio-multi-market",
    "crates/agent-notifier-multi-sink",
    "crates/agent-cash-buffer-push-only",
    "crates/agent-killswitch-panic",
    "crates/agent-twap-linear",
    "crates/agent-spot-grid-static",
    "crates/agent-mean-reversion-ema",
    "crates/agent-risk-alert-passive",
    "crates/agent-circuit-breaker-deviation",
    "crates/agent-test-run-rpc-smoke",
    "crates/agent-readiness-check-pre-trade",
    "crates/agent-portfolio-health-snapshot",
    "crates/agent-orderbook-streaming-depth-fanout",
    "crates/agent-oracle-scheduled",
    "crates/agent-fair-value-multi-source",
    "crates/agent-spread-capture-single-level",
    "crates/agent-signal-bot-jsonl",
    "crates/agent-inventory-mgmt-band",
    "crates/agent-order-matching-trigger",
    "crates/agent-witnesses-shell-hooks",
    "crates/agent-failure-recovery-settlement-watchdog",
    "crates/agent-infinite-grid-mid-following",
    "crates/agent-trend-analysis-ta-indicators",
    "crates/agent-pairs-trading-ratio-divergence",
    "crates/agent-iceberg-execution-hidden-parent",
    "crates/agent-volatility-screening-rolling-stddev",
    "crates/agent-pre-trade-check-offline-rules",
    "crates/agent-pnl-screening-settlement-stream",
    "crates/agent-trend-following-ema-crossover",
    "crates/agent-portfolio-rebalancing-target-weights",
    "crates/agent-trading-history-signed-chain",
    "crates/agent-risk-exposure-concentration",
    "crates/agent-blocked-party-blocklist",
    "crates/agent-hedging-counter-position",
    "crates/agent-block-execution-twap-iceberg",
    "crates/agent-batch-orders-bulk-cli",
    "crates/agent-compliance-screening-settlement-rules",
    "crates/agent-liquidity-screening-depth-probe",
    "crates/agent-target-allocation-absolute-value",
    "crates/agent-liquidity-seeking-slippage-bounded",
    "crates/agent-selective-disclosure-filtered",
    "crates/agent-market-abuse-spoof-layer",
    "crates/agent-human-approval-queue",
    "crates/agent-concentration-risk-enforcer",
    "crates/agent-yield-rotation-carry-ranking",
    "crates/agent-treasury-mgmt-policy-routed",
    "crates/agent-contractual-compliance-bilateral",
    "crates/agent-legal-compliance-jurisdiction",
    "crates/agent-scam-screening-threat-feed",
    "crates/agent-risk-management-composite",
    "crates/agent-inventory-risk-auto-hedge",
    "crates/agent-smart-allocation-buckets",
    "crates/agent-algo-order-dispatcher",
    "crates/agent-audit-attestation-checkpoints",
    "crates/agent-audit-replay-back-test",
    "crates/agent-audit-retention-chained",
    "crates/agent-audit-anomaly-heuristic",
    "crates/agent-copy-trading-mirror",
    "crates/agent-ai-signal-llm-schema",
    "crates/agent-news-sentiment-lexicon",
    "crates/agent-strategy-genesis-keyword",
    "crates/agent-trade-explain-rationale",
    "crates/agent-anomaly-classifier-rule-clustering",
    "crates/agent-spot-grid-geometric",
    "crates/agent-spot-grid-skewed",
    "crates/agent-spot-dca-value-averaging",
    "crates/agent-copy-trading-proportional",
    "crates/agent-tpsl-bracket",
    "crates/agent-infinite-grid-volatility-scaled",
]
default-members = [
    "crates/cloud-agent",
    "crates/cli",
    "crates/agent-logic",
    "crates/orderbook-proto",
    "crates/tx-verifier",
    "crates/message-signing",
    "crates/agent-spot-dca-scheduled",
    "crates/agent-tpsl-classic",
    "crates/agent-watchlist-passive",
    "crates/agent-order-expiry-ttl",
    "crates/agent-state-monitor-self-stream",
    "crates/agent-signature-ed25519",
    "crates/agent-auth-jwt",
    "crates/agent-dca-portfolio-multi-market",
    "crates/agent-notifier-multi-sink",
    "crates/agent-cash-buffer-push-only",
    "crates/agent-killswitch-panic",
    "crates/agent-twap-linear",
    "crates/agent-spot-grid-static",
    "crates/agent-mean-reversion-ema",
    "crates/agent-risk-alert-passive",
    "crates/agent-circuit-breaker-deviation",
    "crates/agent-test-run-rpc-smoke",
    "crates/agent-readiness-check-pre-trade",
    "crates/agent-portfolio-health-snapshot",
    "crates/agent-orderbook-streaming-depth-fanout",
    "crates/agent-oracle-scheduled",
    "crates/agent-fair-value-multi-source",
    "crates/agent-spread-capture-single-level",
    "crates/agent-signal-bot-jsonl",
    "crates/agent-inventory-mgmt-band",
    "crates/agent-order-matching-trigger",
    "crates/agent-witnesses-shell-hooks",
    "crates/agent-failure-recovery-settlement-watchdog",
    "crates/agent-infinite-grid-mid-following",
    "crates/agent-trend-analysis-ta-indicators",
    "crates/agent-pairs-trading-ratio-divergence",
    "crates/agent-iceberg-execution-hidden-parent",
    "crates/agent-volatility-screening-rolling-stddev",
    "crates/agent-pre-trade-check-offline-rules",
    "crates/agent-pnl-screening-settlement-stream",
    "crates/agent-trend-following-ema-crossover",
    "crates/agent-portfolio-rebalancing-target-weights",
    "crates/agent-trading-history-signed-chain",
    "crates/agent-risk-exposure-concentration",
    "crates/agent-blocked-party-blocklist",
    "crates/agent-hedging-counter-position",
    "crates/agent-block-execution-twap-iceberg",
    "crates/agent-batch-orders-bulk-cli",
    "crates/agent-compliance-screening-settlement-rules",
    "crates/agent-liquidity-screening-depth-probe",
    "crates/agent-target-allocation-absolute-value",
    "crates/agent-liquidity-seeking-slippage-bounded",
    "crates/agent-selective-disclosure-filtered",
    "crates/agent-market-abuse-spoof-layer",
    "crates/agent-human-approval-queue",
    "crates/agent-concentration-risk-enforcer",
    "crates/agent-yield-rotation-carry-ranking",
    "crates/agent-treasury-mgmt-policy-routed",
    "crates/agent-contractual-compliance-bilateral",
    "crates/agent-legal-compliance-jurisdiction",
    "crates/agent-scam-screening-threat-feed",
    "crates/agent-risk-management-composite",
    "crates/agent-inventory-risk-auto-hedge",
    "crates/agent-smart-allocation-buckets",
    "crates/agent-algo-order-dispatcher",
    "crates/agent-audit-attestation-checkpoints",
    "crates/agent-audit-replay-back-test",
    "crates/agent-audit-retention-chained",
    "crates/agent-audit-anomaly-heuristic",
    "crates/agent-copy-trading-mirror",
    "crates/agent-ai-signal-llm-schema",
    "crates/agent-news-sentiment-lexicon",
    "crates/agent-strategy-genesis-keyword",
    "crates/agent-trade-explain-rationale",
    "crates/agent-anomaly-classifier-rule-clustering",
    "crates/agent-spot-grid-geometric",
    "crates/agent-spot-grid-skewed",
    "crates/agent-spot-dca-value-averaging",
    "crates/agent-copy-trading-proportional",
    "crates/agent-tpsl-bracket",
    "crates/agent-infinite-grid-volatility-scaled",
]

[workspace.package]
version = "0.3.4"
edition = "2024"
authors = ["DFST"]
license = "Apache-2.0"

[workspace.dependencies]
# Core dependencies with consistent versions across all crates
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt", "json"] }
tokio = { version = "1", features = ["full"] }
chrono = { version = "0.4", features = ["serde"] }
hex = "0.4"
sha2 = "0.10"
base64 = "0.22"

# CLI dependencies
clap = { version = "4", features = ["derive"] }
ed25519-dalek = { version = "2.1", features = ["rand_core"] }
rand = "0.8"
dotenvy = "0.15"

# gRPC and protobuf dependencies
tonic = "0.14"
prost = "0.14"
prost-types = "0.14"
prost-reflect = { version = "0.16", features = ["derive"] }
once_cell = "1.21.3"
tonic-reflection = "0.14"

# Build dependencies
tonic-build = "0.14"
tonic-prost = "0.14"
tonic-prost-build = "0.14.2"
prost-build = "0.14"
prost-reflect-build = "0.16"

# Additional dependencies
tokio-stream = "0.1"
