[package]
name = "agent-audit-anomaly-heuristic"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[[bin]]
name = "agent-audit-anomaly-heuristic"
path = "src/main.rs"

[dependencies]
clap = { workspace = true, features = ["derive", "env"] }
dotenvy = { workspace = true }
anyhow = { workspace = true }

tokio = { workspace = true, features = ["macros", "rt-multi-thread", "fs", "io-util"] }

serde_json = { workspace = true }
chrono = { workspace = true }
tracing = { workspace = true }
