[package]
name = "agent-audit-replay-back-test"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[[bin]]
name = "agent-audit-replay-back-test"
path = "src/main.rs"

[dependencies]
clap = { workspace = true, features = ["derive", "env"] }
dotenvy = { workspace = true }
anyhow = { workspace = true }

tokio = { workspace = true, features = ["macros", "rt-multi-thread", "fs", "io-util"] }

serde = { workspace = true }
serde_json = { workspace = true }
toml = "0.8"
tracing = { workspace = true }
