[package]
name = "agent-auth"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[[bin]]
name = "agent-auth"
path = "src/main.rs"

[dependencies]
agent-logic = { path = "../agent-logic" }

clap = { workspace = true, features = ["derive", "env"] }
dotenvy = { workspace = true }

anyhow = { workspace = true }
base64 = { workspace = true }
serde_json = { workspace = true }
ed25519-dalek = { workspace = true }
bs58 = "0.5"
hex = { workspace = true }
chrono = { workspace = true }
