[package]
name = "agent-news-sentiment-lexicon"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[[bin]]
name = "agent-news-sentiment-lexicon"
path = "src/main.rs"

[dependencies]
anyhow = { workspace = true }
tokio = { workspace = true, features = ["macros", "rt-multi-thread", "fs", "io-util", "time"] }
clap = { workspace = true, features = ["derive", "env"] }
dotenvy = { workspace = true }
serde_json = { workspace = true }
chrono = { workspace = true }
tracing = { workspace = true }
