[package]
name = "agent-order-expiry"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[[bin]]
name = "agent-order-expiry"
path = "src/main.rs"

[dependencies]
# Internal crates
orderbook-agent-logic = { path = "../orderbook-agent-logic" }
orderbook-proto = { path = "../orderbook-proto" }

# gRPC
tonic = { workspace = true, features = ["tls-webpki-roots"] }

# Async runtime
tokio = { workspace = true, features = ["macros", "rt-multi-thread", "signal", "time", "sync"] }

# CLI
clap = { workspace = true, features = ["derive", "env"] }
dotenvy = { workspace = true }

# Logging and errors
tracing = { workspace = true }
tracing-subscriber = { workspace = true, features = ["env-filter", "fmt"] }
anyhow = { workspace = true }

# TLS provider
rustls = { version = "0.23", features = ["aws-lc-rs"], default-features = false }

# Time arithmetic on google.protobuf.Timestamp
chrono = { workspace = true }
prost-types = { workspace = true }
