[package]
name = "agent-pre-trade-check-offline-rules"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[[bin]]
name = "agent-pre-trade-check-offline-rules"
path = "src/main.rs"

[dependencies]
clap = { workspace = true, features = ["derive", "env"] }
serde = { workspace = true }
serde_json = { workspace = true }
toml = "0.8"
anyhow = { workspace = true }
rust_decimal = { version = "1.36" }
